Fixed padding on mobile style for footer

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -225,6 +225,10 @@ a:hover {
     padding: 20px;
   }
 
+  .footer-container {
+    padding: 20px;
+  }
+
   .page,
   .footer {
     width: 100%;
